--- a/app.json
+++ b/app.json
@@ -31,6 +31,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "33a23975-7c80-4982-a5c5-8f3a1b1da982"
+      }
+    },
+    "owner": "wildanzr"
   }
 }
